# security-key

./: .gitmodules  README.md
firmware/: CMakeLists.txt
firmware/scripts/: build.sh  monitor.sh  picotool.sh  setup.sh  upload.sh
firmware/src/: cdc.c  cdc.h  debug.c  debug.h  hid.c  hid.h  main.c  storage.c  storage.h  usb_descriptors.c
host/: CMakeLists.txt
host/scripts/: setup.sh
host/src/: main.c
scripts/: build.sh  upload.sh
src/: main.c  tusb_config.h  usb_descriptors.c
